[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/main.gd" type="Script" id=2]
[ext_resource path="res://scenes/mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/hud.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/art/gameover.wav" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
Mob = ExtResource( 3 )

[node name="BaseBackground" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
margin_left = -16.0
margin_top = -16.0
margin_right = 504.0
margin_bottom = 736.0
color = Color( 0.615686, 0.705882, 0.980392, 0.666667 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
